--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/react": "^18.0.15",
         "@typescript-eslint/eslint-plugin": "^5.31.0",
         "@typescript-eslint/parser": "^5.31.0",
+        "autoprefixer": "^10.4.8",
         "clean-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^10.2.4",
         "cross-env": "^7.0.3",
@@ -46,6 +47,7 @@
         "mini-css-extract-plugin": "^2.6.0",
         "node-sass": "^7.0.1",
         "papaparse": "^5.3.2",
+        "postcss-loader": "^7.0.1",
         "prettier": "^2.7.1",
         "react": "^18.2.0",
         "sass-loader": "^12.6.0",
@@ -60,6 +62,7 @@
         "xml-loader": "^1.2.1"
     },
     "dependencies": {
+        "bootstrap-scss": "^4.6.2",
         "normalize.css": "^8.0.1",
         "typescript": "^4.7.4"
     }
